<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Todo App</string>
    <string name="add_task">Добавить задачу</string>
    <string name="delete_completed">Удалить завершенные</string>
    <string name="task_title">Заголовок задачи</string>
    <string name="task_description">Описание задачи</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="edit">Редактировать</string>
    <string name="delete_task">Удалить задачу</string>
    <string name="back">Назад</string>
</resources>